--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -14,6 +14,14 @@
           <label>Apps</label>
         </li>
         <li class="pc-item">
+          <a href="{{ url_for('device_blueprint.device') }}" class="pc-link">
+            <span class="pc-micon">
+              <i data-feather="home"></i>
+            </span>
+            <span class="pc-mtext">设备信息</span>
+          </a>
+        </li>
+        <li class="pc-item">
           <a href="{{ url_for('home_blueprint.index') }}" class="pc-link">
             <span class="pc-micon">
               <i data-feather="home"></i>
