--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -18,7 +18,23 @@
             <span class="pc-micon">
               <i data-feather="home"></i>
             </span>
-            <span class="pc-mtext">设备信息</span>
+            <span class="pc-mtext">电台基本信息</span>
+          </a>
+        </li>
+        <li class="pc-item">
+          <a href="{{ url_for('device_blueprint.devlist') }}" class="pc-link">
+            <span class="pc-micon">
+              <i data-feather="home"></i>
+            </span>
+            <span class="pc-mtext">设备列表</span>
+          </a>
+        </li>
+        <li class="pc-item">
+          <a href="{{ url_for('device_blueprint.companylist') }}" class="pc-link">
+            <span class="pc-micon">
+              <i data-feather="home"></i>
+            </span>
+            <span class="pc-mtext">公司列表</span>
           </a>
         </li>
         <li class="pc-item">
