--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -30,7 +30,7 @@
           </a>
         </li>
         <li class="pc-item">
-          <a href="{{ url_for('device_blueprint.companylist') }}" class="pc-link">
+          <a href="{{ url_for('company_blueprint.companylist') }}" class="pc-link">
             <span class="pc-micon">
               <i data-feather="home"></i>
             </span>
